# Bluebook

./: .dockerignore  .gitignore  Backend.Dockerfile  Cache.Dockerfile  Dockerfile  Dockerfile.Vite  Frontend.Dockerfile  Issues.md  README.md  api.go  backend-run.sh  backup.go  backup.sh  buil.sh  build.sh  cleanup.sh  dev.docker-compose.yml  dock-test.sh  docker-compose.yml  env.sh  front-build.sh  go-build.sh  go.mod  go.sum  import.go  main.go  models.go  notes  run.sh  server.go  testdata  top5.json  waste_def.json  wisr-import-test.py
backend/: .env  .gitignore  Cargo.toml  backup.go  build.rs  env.sh  go.mod  go.sum  import.go  main.go  server.go  team-names.json
backend-rust/: .env  .gitignore  Cargo.toml  Dockerfile  dev.sql  diesel.toml
backend-rust/migrations/2024-12-26-222958_weekly_info/: up.sql
backend-rust/migrations/2025-01-08-234917_copy_weekly_info/: up.sql
backend-rust/migrations/2025-01-11-221744_copy_day_data/: down.sql  up.sql
backend-rust/migrations/2025-01-14-220009_hockey_schedule/: up.sql
backend-rust/migrations/2025-02-22-192442_auv_table/: up.sql
backend-rust/scripts/: auv.sql  daydata.sql  migrate.sh  weekly_info.sql
backend-rust/src/: db.rs  env.rs  enviroment.rs  main.rs  models.rs  schema.rs  tag_test.rs
backend-rust/src/api/: auv.rs  backup.rs  day_edit.rs  error.rs  export.ron  export.rs  mod.rs  month.rs  settings.rs  tags.rs  weekly.rs  write_test.rs
backend-rust/src/config/: daily.ron  version.ron
backend-rust/src/handlers/: about.rs  auv.rs  backup.rs  day_edit.rs  export.rs  import.rs  mod.rs  month.rs  settings.rs  tags.rs  weekly.rs
backend-rust/src/imports/: control.rs  daily.rs  id.ron  mod.rs  wisr.rs
backend-rust/src/models/: auv.rs  day_data.rs  hockey.rs  mod.rs  settings.rs  tags.rs  (+1 more)
backend/api/: auv.go  backup.go  comment.go  export.go  hockey.go  month.go  notification.go  settings.go  tags.go  top5.go  utils.go  waste.go  weekly.go
backend/api2/: Auv.go  DayEdit.go  DayEdit_test.go  Import.go  RawSql.go  Stats.go
backend/environ/: environ.go
backend/import/: control.go  daily.go  settings.go  utils.go  waste.go  wisr.go
backend/models/: RawSql.go  auv.go  backup.go  daydata.go  hockey.go  notifcations.go  settings.go  utils.go  waste.go  weekly.go
backend/scripts/: auv.sql  daydata.sql  hockey.sql  migrate.sh  migrate.sql  settings.sql  weekly_info.sql
backend/src/: enviroment.rs  main.rs  schema.rs
backend/tests/: build.sh  run.sh
(+217 files in other folders)
