[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# actix server bits
actix-web = "4.9.0"
actix-files = "0.6.6"
actix-cors = "0.7"

# loggings
env_logger = "0.11.6"

# .env file reading
dotenvy = "0.15"

# serialization
serde = { version = "1.0", features = ["derive"] }

# db
diesel = { version = "2.2", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
  "r2d2",
  "time",
  # "64-column-tables",
] }

diesel_migrations = "2.2.0"

# db pool connection
# r2d2 = "0.8.10"

# time library
time = { version = "0.3", features = ["serde"] }
